# Tetris

./: CMakeLists.txt  README.md  Tetris.sln
Tetris/: Defines.hpp  Figure.cpp  Figure.cpp.bak  Figure.hpp  Game.cpp  Game.hpp  Tetris.vcxproj  Tetris.vcxproj.filters  Utils.cpp  Utils.hpp  main.cpp
Tetris/x64/Debug/: Tetris.exe.recipe  Tetris.ilk  vc143.idb
Tetris/x64/Debug/Tetris.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Tetris.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: Defines.hpp  Figure.hpp  Game.hpp  Utils.hpp
src/: Figure.cpp  Game.cpp  main.cpp
